--- a/css/components.css
+++ b/css/components.css
@@ -1,1 +1,9 @@
-
+.btn {
+  height: 48px;
+  width: 100%;
+  outline: 1px solid var(--color-black);
+  background-color: var(--color-white);
+  border-radius: 5px;
+  font-size: var(--font-size-lg);
+  font-weight: var(--font-w-bold);
+}
