--- a/css/base.css
+++ b/css/base.css
@@ -6,6 +6,7 @@ body {
   font-weight: var(--font-w-regular);
   color: var(--color-black);
   background-color: var(--color-white);
+  margin: 0;
 }
 
 /* Container */
@@ -19,9 +20,42 @@ header {
   background: var(--color-white);
 }
 
+body {
+  padding-top: 70px;
+}
+
 footer {
   background: var(--color-accent-gradient);
   color: var(--color-white);
+  height: 406px;
+}
+
+html {
+  font-size: 16px;
+}
+
+/* Links */
+a:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+/* input */
+input {
+  height: 48px;
+  width: 100%;
+  padding: 0 var(--space-4);
+  border: 1px solid var(--color-black);
+  border-radius: 5px;
+  outline: none;
+  color: inherit;
+}
+
+input:focus-visible,
+textarea:focus-visible,
+select:focus-visible,
+button:focus-visible {
+  border: 1px solid var(--color-active);
 }
 
 @media (min-width: 768px) {
