--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,61 @@
     align-items: center;
   }
 }
+
+/* ======= Footer ======= */
+/* Links */
+
+.footer__links {
+  display: flex;
+  gap: var(--space-4);
+  padding: var(--space-6) 0;
+}
+
+.footer__link {
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.footer__title {
+  font-size: var(--font-size-xl);
+  font-weight: var(--font-w-medium);
+  padding-bottom: var(--space-4);
+}
+
+.footer__signup {
+  max-width: 400px;
+}
+
+.footer__signup input {
+  border: 1px solid var(--color-white);
+}
+
+.footer__signup input:focus {
+  border: 1px solid var(--color-black);
+}
+
+.footer__signup input::placeholder {
+  color: var(--color-white);
+  font-weight: var(--font-w-light);
+}
+
+.footer__nav img {
+  height: 20px;
+  width: 20px;
+}
+
+.footer__nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.footer__copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.container__footer {
+  padding-top: var(--space-8);
+}
