--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 var(--container-padding);
-  z-index: 20;
-  background: transparent;
-  transition: background 0.3s ease;
+  background: var(--color-white);
 }
 
 /* Navbar state when menu is open */
@@ -169,7 +166,7 @@
 
   /* navbar stays clean on desktop */
   .navbar {
-    background: transparent;
+    background: var(--color-white);
   }
 
   .navbar.menu-open {
@@ -230,6 +227,26 @@
     display: inline-flex;
     align-items: center;
   }
+}
+
+/* ======= Feed ======= */
+/* Grid */
+.posts-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: var(--space-6) var(--space-4);
+  padding: var(--space-7) 0;
+}
+
+.load-more {
+  display: flex;
+  justify-content: center;
+  padding-bottom: var(--space-7);
+}
+
+.feed-title {
+  max-width: 475px;
+  padding: var(--space-9) 0;
 }
 
 /* ======= Footer ======= */
