--- a/css/variables.css
+++ b/css/variables.css
@@ -48,6 +48,7 @@
   --space-6: 2rem; /* 32px */
   --space-7: 3rem; /* 48px */
   --space-8: 4rem; /* 64px */
+  --space-9: 6rem; /* 96px */
 
   /* Layout */
   --container-max-width: 72rem; /* 1152px */
