--- a/css/components.css
+++ b/css/components.css
@@ -7,6 +7,7 @@
   border-radius: 5px;
   font-size: var(--font-size-lg);
   font-weight: var(--font-w-bold);
+  margin: var(--space-4) 0;
 }
 
 .btn--medium {
@@ -61,7 +62,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: var(--color-accent-gradient);
+  background: var(--color-accent-gradient-light);
   opacity: 0;
   transition: opacity 0.2s ease;
   z-index: -5;
@@ -84,4 +85,25 @@
 
 .post-card a:hover {
   text-decoration: none;
+}
+
+/* alerts  */
+.alert {
+  display: none;
+  max-width: 360px;
+  width: 100%;
+  padding: var(--space-2) var(--space-6);
+  border-radius: 5px;
+  background-color: var(--color-accent);
+  margin: var(--space-6) 0;
+  text-align: center;
+}
+
+.alert--error {
+  border: 1px solid var(--color-error);
+  color: var(--color-error);
+}
+
+.alert.is-visible {
+  display: block;
 }
