--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,12 @@
   padding: var(--space-9) 0;
 }
 
+.title-small--highlighted {
+  display: inline-block;
+  padding: 4px;
+  background-color: var(--color-accent);
+}
+
 /* ======= Footer ======= */
 /* Links */
 
